--- a/app/src/main/res/layout/activity_book_view.xml
+++ b/app/src/main/res/layout/activity_book_view.xml
@@ -21,21 +21,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_media_next" />
 
-    <WebView
+    <nl.janrekers.basicepubviewer.HorizontalWebView
         android:id="@+id/webviewBook"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_prev"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </WebView>
+    </nl.janrekers.basicepubviewer.HorizontalWebView>
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="title"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
